mutants.out/log/src__http__response_builder.rs_line_152_col_9.log

*** src/http/response_builder.rs:152:9: replace ResponseBuilder<S>::without_content_length_header -> Self with Default::default()

*** mutation diff:
--- src/http/response_builder.rs
+++ replace ResponseBuilder<S>::without_content_length_header -> Self with Default::default()
@@ -144,18 +144,17 @@
     /// # use http::ResponseBuilder;
     /// let response = ResponseBuilder::ok()
     ///     .without_content_length_header()
     ///     .build();
     ///
     /// assert_eq!(response.headers.len(), 0);
     /// ```
     pub fn without_content_length_header(mut self) -> Self {
-        self.set_content_length_header = false;
-        self
+        Default::default() /* ~ changed by cargo-mutants ~ */
     }
 
     /// # Set the body of the response.
     ///
     /// The body is a byte vector. To set the body, pass any value implementing the
     /// `Into<Vec<u8>>` trait.
     ///
     /// # Example


*** /Users/aw/.rustup/toolchains/stable-aarch64-apple-darwin/bin/cargo test --no-run --manifest-path /var/folders/dk/rmy45p9s5bn3y62kyrkfh6440000gn/T/cargo-mutants-codecrafters-http-server-rust-eXV76S.tmp/Cargo.toml --all-features
   Compiling http-server-starter-rust v0.1.0 (/var/folders/dk/rmy45p9s5bn3y62kyrkfh6440000gn/T/cargo-mutants-codecrafters-http-server-rust-eXV76S.tmp)
error[E0277]: the trait bound `response_builder::ResponseBuilder<S>: std::default::Default` is not satisfied
   --> src/http/response_builder.rs:152:9
    |
152 |         Default::default() /* ~ changed by cargo-mutants ~ */
    |         ^^^^^^^^^^^^^^^^^^ the trait `std::default::Default` is not implemented for `response_builder::ResponseBuilder<S>`
    |
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
    |
62  | impl<S> ResponseBuilder<S> where response_builder::ResponseBuilder<S>: std::default::Default {
    |                            +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

For more information about this error, try `rustc --explain E0277`.
error: could not compile `http-server-starter-rust` (bin "http-server-starter-rust" test) due to 1 previous error

*** result: Failure(101)
